# nanowatch

./: .gitignore  CHANGELOG.md  README.md  demo.py  perf_results.json  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/nanowatch/: __init__.py
src/nanowatch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nanowatch/core/: __init__.py  collector.py  timer.py
src/nanowatch/interfaces/: __init__.py  decorators.py  line_profiler.py  middleware.py  mixin.py
src/nanowatch/output/: __init__.py  formatter.py
tests/: test_nanowatch.py
