[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanowatch"
version = "0.1.2"
description = "High-precision Python performance measurement toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["performance", "profiling", "timing", "benchmark", "measurement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/munjed-ab/nanowatch"
Repository = "https://github.com/munjed-ab/nanowatch"
Issues = "https://github.com/munjed-ab/nanowatch/issues"
Changelog = "https://github.com/munjed-ab/nanowatch/blob/main/CHANGELOG.md"